éléments en jaune dans les titres

--- a/anticiper.html
+++ b/anticiper.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="anticiper.html">Anticiper</a></li>
-                    <li class="nav-item"><a class="nav-link" href="créer.html">Créer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="creer.html">Créer</a></li>
                     <li class="nav-item"><a class="nav-link" href="rayonner.html">Rayonner</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#recomandations">Recommandations</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#equipe">Équipe</a></li>
@@ -44,7 +44,7 @@
     <header class="masthead">
         <div class="container">
             <div class="masthead-heading text-uppercase">Anticiper</div>
-            <div class="masthead-subheading">Dialoguer pour anticiper les effets sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers.</div>
+            <div class="masthead-subheading">Dialoguer pour <span style="color: #f5b400;">explorer et imaginer les effets </span>sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers.</div>
         </div>
     </header>
         
