--- a/creer.html
+++ b/creer.html
@@ -43,7 +43,7 @@
     <header class="masthead">
         <div class="container">
             <div class="masthead-heading text-uppercase">Créer</div>
-            <div class="masthead-subheading">Dialoguer pour donner vie à des mesures concrêtes et situées en soutien au développement responsable de technologies quantiques spécifiques</div>
+            <div class="masthead-subheading">Dialoguer pour <span style="color: #f5b400;">donner vie à des mesures </span>concrêtes et situées en soutien au développement responsable de technologies quantiques spécifiques</div>
         </div>
     </header>
         
