--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="text-center">
                 <h2 class="section-heading text-uppercase">Anticiper</h2>
-                <p class="section-subheading text-muted mx-auto lead mw-640"> Dialoguer pour anticiper les effets sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers. </p>
+                <p class="section-subheading text-muted mx-auto lead mw-640"> Dialoguer pour explorer et imaginer les effets sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers. </p>
 
                 <!-- bouton vers la page dédiée -->
                 <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2"
