--- a/rayonner.html
+++ b/rayonner.html
@@ -43,7 +43,7 @@
     <header class="masthead">
         <div class="container">
             <div class="masthead-heading text-uppercase">Rayonner</div>
-            <div class="masthead-subheading">Dialoguer pour partager les retombées du projet à travers des actions de vulgarisation, des publications, des conférences et d’autres formes de diffusion scientifique et publique.</div>
+            <div class="masthead-subheading">Dialoguer pour <span style="color: #f5b400;">partager les retombées </span>du projet à travers des actions de vulgarisation, des publications, des conférences et d’autres formes de diffusion scientifique et publique.</div>
         </div>
     </header>
         
